@@ -46,9 +46,6 @@ def get_parser():
     parser.add_argument('-b', '--no-bigcount', dest='bigcount', default=True,
                         action='store_false',
                         help='Do not count k-mers past 255')
-    parser.add_argument('--csv', default=False, action='store_true',
-                        help='Use the CSV format for the histogram. '
-                        'Includes column headers.')
     parser.add_argument('--version', action='version', version='%(prog)s ' +
                         khmer.__version__)
     parser.add_argument('-f', '--force', default=False, action='store_true',
@@ -110,10 +107,9 @@ def main():
         sys.exit(1)
 
     hash_fp = open(args.output_histogram_filename, 'w')
-    if args.csv:
-        hash_fp_csv = csv.writer(hash_fp)
-        # write headers:
-        hash_fp_csv.writerow(['abundance', 'count', 'cumulative',
+    hash_fp_csv = csv.writer(hash_fp)
+    # write headers:
+    hash_fp_csv.writerow(['abundance', 'count', 'cumulative',
                               'cumulative_fraction'])
 
     sofar = 0
@@ -124,10 +120,7 @@ def main():
         sofar += i
         frac = sofar / float(total)
 
-        if args.csv:
-            hash_fp_csv.writerow([_, i, sofar, round(frac, 3)])
-        else:
-            print(_, i, sofar, round(frac, 3), file=hash_fp)
+        hash_fp_csv.writerow([_, i, sofar, round(frac, 3)])
 
         if sofar == total:
             break
